<resources>
    <string name="app_name">SearchProducts</string>
    <string name="search">Search</string>
    <string name="enter_product_name">Введіть назву продукту</string>
    <string name="title">title</string>
    <string name="price">price</string>
    <string name="name">name</string>
    <string name="details">details</string>
    <string name="filters">Фільтри</string>
    <string name="category">Сортування</string>
    <string name="prices">Ціни</string>
    <string name="todo">TODO</string>
    <string name="details_info">Переглянути детальну інформацію</string>
    <string name="priceRange">Діапазон цін, грн.</string>
    <string name="_0">0</string>
    <string name="ok">OK</string>
    <string name="grn"> грн.</string>
    <string name="noConnect">Відсутнє підключення до інтернету</string>
    <string name="sortby">Сортування</string>
    <string name="byScore">За рейтингом</string>
    <string name="byMinPrice">Дешевше</string>
    <string name="byMaxPrice">Дорожче</string>
    <string name="loadMore">Завантажити ще</string>
    <string name="favoriteProducts">Улюблені товари</string>
    <array name="double_slider_values">
        <item>10</item>
        <item>100</item>
    </array>
</resources>