<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        app:cardBackgroundColor="@color/cream"
        app:cardCornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textViewSortTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="10dp"
                android:text="@string/sortby"
                android:textColor="@color/dark"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewSortTitle"
                tools:layout_editor_absoluteX="match_parent"
                tools:layout_editor_absoluteY="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonByScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/byScore"
                    android:textColor="@color/dark"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <RadioButton android:id="@+id/radioButtonByMinPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/byMinPrice"
                    android:textColor="@color/dark"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <RadioButton android:id="@+id/radioButtonByMaxPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/byMaxPrice"
                    android:textColor="@color/dark"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>