<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:weightSum="3">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/filter_background">

            <TextView
                android:id="@+id/filterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/filters"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/dark"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="14dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_filter"
                app:layout_constraintEnd_toEndOf="@+id/filterTextView"
                app:layout_constraintTop_toTopOf="@+id/filterTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/filter_background">

            <TextView
                android:id="@+id/categoryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/category"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/dark"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="14dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_filter"
                app:layout_constraintEnd_toEndOf="@+id/categoryTextView"
                app:layout_constraintTop_toTopOf="@+id/categoryTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="10dp"
            android:background="@drawable/filter_background">

            <TextView
                android:id="@+id/pricesTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/prices"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/dark"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="14dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/ic_filter"
                app:layout_constraintEnd_toEndOf="@+id/pricesTextView"
                app:layout_constraintTop_toTopOf="@+id/pricesTextView" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <!--        <include-->
<!--            android:id="@+id/filterView"-->
<!--            layout="@layout/filter_view"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_weight="1"-->
<!--            app:filterText="@string/filters" />-->

<!--        <include-->
<!--            android:id="@+id/categoryView"-->
<!--            layout="@layout/filter_view"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_weight="1"-->
<!--            app:filterText="@string/category" />-->

<!--        <include-->
<!--            android:id="@+id/pricesView"-->
<!--            layout="@layout/filter_view"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_weight="1"-->
<!--            app:filterText="@string/prices" />-->
    </LinearLayout>
</layout>